[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cryptor Trends"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.3"
pydantic = "^2.7.0"
requests = "^2.31.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
