[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cryptor-Trends"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.31.0"
google-generativeai = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
